// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Paragraph Image runs correctly 1`] = `
Object {
  "children": Array [
    Object {
      "children": null,
      "props": Object {
        "src": "https://lh5.googleusercontent.com/227wZYprRh_IEImeCfwbwrTFEPCnGhADmEmc9m91RnrHwut-a20xv5Ls0ApQRj8lqG5MRwXkRDulj4ddTczJPnIOzVeIaOGfoywS9By-nJc5W59VW4M-UEwx0f1cwhOfB39asOg_2D4V7Jdhfaocthxa1n8",
      },
      "type": "img",
    },
    Object {
      "children": Array [
        "
",
      ],
      "props": Object {
        "style": Object {
          "fontSize": "12px",
        },
      },
      "type": "span",
    },
  ],
  "props": Object {},
  "type": "p",
}
`;

exports[`Paragraph Link runs correctly 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            "Thao FB",
          ],
          "props": Object {
            "style": Object {
              "fontSize": "12px",
              "textDecoration": "underline",
            },
          },
          "type": "span",
        },
      ],
      "props": Object {
        "href": "https://www.facebook.com/thaoho0806",
      },
      "type": "a",
    },
    Object {
      "children": Array [
        "
",
      ],
      "props": Object {
        "style": Object {
          "fontSize": "12px",
        },
      },
      "type": "span",
    },
  ],
  "props": Object {},
  "type": "p",
}
`;

exports[`Paragraph TextRun runs correctly 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        "This is a normal paragraph!!!!",
      ],
      "props": Object {
        "style": Object {
          "fontSize": "12px",
        },
      },
      "type": "span",
    },
    Object {
      "children": Array [
        "
",
      ],
      "props": Object {
        "style": Object {
          "fontSize": "12px",
        },
      },
      "type": "span",
    },
  ],
  "props": Object {},
  "type": "p",
}
`;
